@@ -1887,7 +1887,8 @@ SetData('y', y)
 	dataset is a 2D dataset return the tuple (data, rangex,
 	rangey), where data is a 2D numpy array and rangex/y are
 	tuples giving the range of the x and y coordinates of the
-	data.</para>
+	data. If it is an ND dataset, return an n-dimensional
+	array.</para>
 
 	<informalexample>
 	  <programlisting>
