@@ -1,0 +1,12 @@
+1.0,2.3,1.4,1.7
+2.1,2.5,1.0,1.8
+1.3,2.2,1.7,2.9
+
+3.3,2.1,2.5,1.5
+1.3,1.9,2.8,1.3
+1.8,2.9,2.0,2.7
+
+1.6,1.8,2.5,1.7
+2.5,2.0,1.1,2.5
+3.1,1.1,2.1,1.8
+
