@@ -1,0 +1,99 @@
+# Veusz saved document (version 1.24)
+# Saved at 2016-11-19T13:44:33.655963
+
+ImportFileND(u'nd-1.csv', u'ndim', csvlocale=u'en_GB', linked=True, mode='csv')
+Set('StyleSheet/Font/font', u'DejaVu Sans')
+Add('page', name='page1', autoadd=False)
+To('page1')
+Add('graph', name=u'inset', autoadd=False)
+To(u'inset')
+Set('leftMargin', '3.235cm')
+Set('rightMargin', '8.745cm')
+Set('topMargin', '9.487cm')
+Set('bottomMargin', u'2.6cm')
+Add('axis', name='x', autoadd=False)
+To('x')
+Set('TickLabels/hide', True)
+To('..')
+Add('axis', name='y', autoadd=False)
+To('y')
+Set('direction', 'vertical')
+Set('TickLabels/hide', True)
+To('..')
+Add('image', name='image1', autoadd=False)
+To('image1')
+Set('data', u'ndim[:,:,0]')
+Set('colorMap', u'brown-blue')
+To('..')
+To('..')
+Add('graph', name=u'inset2', autoadd=False)
+To(u'inset2')
+Set('leftMargin', '10.379cm')
+Set('rightMargin', '1.601cm')
+Set('topMargin', '9.487cm')
+Set('bottomMargin', u'2.6cm')
+Add('axis', name='x', autoadd=False)
+To('x')
+Set('TickLabels/hide', True)
+To('..')
+Add('axis', name='y', autoadd=False)
+To('y')
+Set('direction', 'vertical')
+Set('TickLabels/hide', True)
+To('..')
+Add('image', name='image1', autoadd=False)
+To('image1')
+Set('data', u'ndim[:,2,:]')
+Set('colorMap', u'blue-darkorange')
+To('..')
+To('..')
+Add('graph', name=u'main', autoadd=False)
+To(u'main')
+Set('Background/color', u'#ffe9ff')
+Add('axis', name='x', autoadd=False)
+To('x')
+Set('autoRange', u'+5%')
+Set('TickLabels/underline', True)
+To('..')
+Add('axis', name='y', autoadd=False)
+To('y')
+Set('autoRange', u'+5%')
+Set('direction', 'vertical')
+Set('TickLabels/underline', True)
+To('..')
+Add('xy', name='xy1', autoadd=False)
+To('xy1')
+Set('xData', u'ndim[1,2,:]')
+Set('yData', u'ndim[0,1,:]')
+Set('scalePoints', u'ndim[2,0,:]')
+Set('PlotLine/hide', True)
+To('..')
+Add('xy', name='xy2', autoadd=False)
+To('xy2')
+Set('marker', u'square')
+Set('color', u'#ffaa00')
+Set('xData', u'ndim[0,:,2]')
+Set('yData', u'ndim[1,:,2]')
+Set('scalePoints', u'ndim[0,:,2]')
+Set('PlotLine/hide', True)
+To('..')
+Add('xy', name='xy3', autoadd=False)
+To('xy3')
+Set('marker', u'diamond')
+Set('color', u'#00aaff')
+Set('xData', u'ndim[0,1,:]')
+Set('yData', u'ndim[0,2,:]')
+Set('scalePoints', u'ndim[2,0,:]')
+Set('PlotLine/hide', True)
+To('..')
+Add('xy', name='xy4', autoadd=False)
+To('xy4')
+Set('marker', u'pentagon')
+Set('color', u'#55aa00')
+Set('xData', u'ndim[:,1,2]')
+Set('yData', u'ndim[0,:,1]')
+Set('scalePoints', u'ndim[2,0,:]')
+Set('PlotLine/hide', True)
+To('..')
+To('..')
+To('..')
