@@ -1,0 +1,243 @@
+<?xml version="1.0" standalone="no"?>
+<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN"
+  "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+<svg width="531.4px" height="531.4px" version="1.1"
+    xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink">
+<desc>Veusz output document</desc>
+<defs>
+<clipPath id="c0">
+<path d="m0,0l531.4,0l0,531.4l-531.4,0l0,-531.4"/>
+</clipPath>
+<clipPath id="c1">
+<path d="m60.2,7l464.1,0l0,464.1l-464.1,0l0,-464.1"/>
+</clipPath>
+<clipPath id="c2">
+<path d="m367.7,336.1l107,0l0,103.2l-107,0l0,-103.2"/>
+</clipPath>
+<clipPath id="c3">
+<path d="m114.6,336.1l107,0l0,103.2l-107,0l0,-103.2"/>
+</clipPath>
+</defs>
+<g stroke-linejoin="bevel" stroke-linecap="square" stroke="#000000" fill-rule="evenodd">
+<g clip-path="url(#c0)">
+<g fill="#ffe9ff" stroke-width="0.6">
+<path d="m60.2,7l464.1,0l0,464.1l-464.1,0l0,-464.1"/>
+</g>
+</g>
+<g clip-path="url(#c1)">
+<g fill="#55aa00" stroke-linejoin="miter" stroke-width="0.6">
+<g transform="matrix(1.6 0 0 1.6 81.3 161.4)">
+<path d="m0,-4.5l4.2,3.1l-1.6,5l-5.2,0l-1.6,-5l4.2,-3.1" id="p0"/>
+</g>
+<g transform="matrix(1.8 0 0 1.8 481.1 117)">
+<use xlink:href="#p0"/>
+</g>
+<g transform="matrix(2.5 0 0 2.5 103.5 183.6)">
+<use xlink:href="#p0"/>
+</g>
+</g>
+<g fill="#00aaff" stroke-linejoin="miter" stroke-width="0.6">
+<g transform="matrix(1.6 0 0 1.6 325.6 383.5)">
+<path d="m0,5.3l5.3,-5.3l-5.3,-5.3l-5.3,5.3l5.3,5.3" id="p1"/>
+</g>
+<g transform="matrix(1.8 0 0 1.8 414.4 183.6)">
+<use xlink:href="#p1"/>
+</g>
+<g transform="matrix(2.5 0 0 2.5 81.3 294.6)">
+<use xlink:href="#p1"/>
+</g>
+<g transform="matrix(1.7 0 0 1.7 259 28.1)">
+<use xlink:href="#p1"/>
+</g>
+</g>
+<g fill="#ffaa00" stroke-linejoin="miter" stroke-width="0.6">
+<g transform="matrix(1.4 0 0 1.4 170.1 117)">
+<path d="m-3.7,-3.7l7.5,0l0,7.5l-7.5,0l0,-7.5" id="p2"/>
+</g>
+<use xlink:href="#p2" x="81.3" y="50.3"/>
+<g transform="matrix(1.7 0 0 1.7 236.8 228)">
+<use xlink:href="#p2"/>
+</g>
+</g>
+<g fill="#000000" stroke-linejoin="miter" stroke-width="0.6">
+<g transform="matrix(1.6 0 0 1.6 259 205.8)">
+<path d="m3.7,0c0,2,-1.6,3.7,-3.7,3.7c-2,0,-3.7,-1.6,-3.7,-3.7c0,-2,1.6,-3.7,3.7,-3.7c2,0,3.7,1.6,3.7,3.7" id="p3"/>
+</g>
+<g transform="matrix(1.8 0 0 1.8 503.3 117)">
+<use xlink:href="#p3"/>
+</g>
+<g transform="matrix(2.5 0 0 2.5 303.4 450.1)">
+<use xlink:href="#p3"/>
+</g>
+<g transform="matrix(1.7 0 0 1.7 458.8 272.4)">
+<use xlink:href="#p3"/>
+</g>
+</g>
+</g>
+<g clip-path="url(#c0)">
+<g fill="none" stroke-linecap="butt" stroke-width="0.6">
+<path d="M60.2,471.2l0,-464.1"/>
+<path d="M60.2,461.2l3.7,0M60.2,450.1l3.7,0M60.2,439l3.7,0M60.2,427.9l3.7,0M60.2,416.8l3.7,0M60.2,405.7l3.7,0M60.2,394.6l3.7,0M60.2,383.5l3.7,0M60.2,372.4l3.7,0M60.2,361.3l3.7,0M60.2,350.2l3.7,0M60.2,339.1l3.7,0M60.2,328l3.7,0M60.2,316.9l3.7,0M60.2,305.8l3.7,0M60.2,294.6l3.7,0M60.2,283.5l3.7,0M60.2,272.4l3.7,0M60.2,261.3l3.7,0M60.2,250.2l3.7,0M60.2,239.1l3.7,0M60.2,228l3.7,0M60.2,216.9l3.7,0M60.2,205.8l3.7,0M60.2,194.7l3.7,0M60.2,183.6l3.7,0M60.2,172.5l3.7,0M60.2,161.4l3.7,0M60.2,150.3l3.7,0M60.2,139.2l3.7,0M60.2,128.1l3.7,0M60.2,117l3.7,0M60.2,105.9l3.7,0M60.2,94.8l3.7,0M60.2,83.7l3.7,0M60.2,72.6l3.7,0M60.2,61.4l3.7,0M60.2,50.3l3.7,0M60.2,39.2l3.7,0M60.2,28.1l3.7,0M60.2,17l3.7,0"/>
+<path d="M60.2,450.1l7.5,0M60.2,394.6l7.5,0M60.2,339.1l7.5,0M60.2,283.5l7.5,0M60.2,228l7.5,0M60.2,172.5l7.5,0M60.2,117l7.5,0M60.2,61.4l7.5,0"/>
+</g>
+<g fill="none" stroke-width="1">
+<text x="47.9" y="458.9" font-size="14pt" fill="#000000">1</text>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="1">
+<path d="M47.9,460.9l11,0"/>
+</g>
+<g fill="none" stroke-width="1">
+<text x="21.7" y="403.3" font-size="14pt" fill="#000000">1.25</text>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="1">
+<path d="M21.7,405.3l39,0"/>
+</g>
+<g fill="none" stroke-width="1">
+<text x="30.4" y="347.8" font-size="14pt" fill="#000000">1.5</text>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="1">
+<path d="M30.4,349.8l28,0"/>
+</g>
+<g fill="none" stroke-width="1">
+<text x="21.7" y="292.3" font-size="14pt" fill="#000000">1.75</text>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="1">
+<path d="M21.7,294.3l39,0"/>
+</g>
+<g fill="none" stroke-width="1">
+<text x="47.9" y="236.8" font-size="14pt" fill="#000000">2</text>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="1">
+<path d="M47.9,238.8l11,0"/>
+</g>
+<g fill="none" stroke-width="1">
+<text x="21.7" y="181.2" font-size="14pt" fill="#000000">2.25</text>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="1">
+<path d="M21.7,183.2l39,0"/>
+</g>
+<g fill="none" stroke-width="1">
+<text x="30.4" y="125.7" font-size="14pt" fill="#000000">2.5</text>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="1">
+<path d="M30.4,127.7l28,0"/>
+</g>
+<g fill="none" stroke-width="1">
+<text x="21.7" y="70.2" font-size="14pt" fill="#000000">2.75</text>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="1">
+<path d="M21.7,72.2l39,0"/>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="0.6">
+<path d="M60.2,471.2l464.1,0"/>
+<path d="M70.2,471.2l0,-3.7M81.3,471.2l0,-3.7M92.4,471.2l0,-3.7M103.5,471.2l0,-3.7M114.6,471.2l0,-3.7M125.7,471.2l0,-3.7M136.8,471.2l0,-3.7M147.9,471.2l0,-3.7M159,471.2l0,-3.7M170.1,471.2l0,-3.7M181.2,471.2l0,-3.7M192.3,471.2l0,-3.7M203.4,471.2l0,-3.7M214.5,471.2l0,-3.7M225.6,471.2l0,-3.7M236.8,471.2l0,-3.7M247.9,471.2l0,-3.7M259,471.2l0,-3.7M270.1,471.2l0,-3.7M281.2,471.2l0,-3.7M292.3,471.2l0,-3.7M303.4,471.2l0,-3.7M314.5,471.2l0,-3.7M325.6,471.2l0,-3.7M336.7,471.2l0,-3.7M347.8,471.2l0,-3.7M358.9,471.2l0,-3.7M370,471.2l0,-3.7M381.1,471.2l0,-3.7M392.2,471.2l0,-3.7M403.3,471.2l0,-3.7M414.4,471.2l0,-3.7M425.5,471.2l0,-3.7M436.6,471.2l0,-3.7M447.7,471.2l0,-3.7M458.8,471.2l0,-3.7M469.9,471.2l0,-3.7M481.1,471.2l0,-3.7M492.2,471.2l0,-3.7M503.3,471.2l0,-3.7M514.4,471.2l0,-3.7"/>
+<path d="M81.3,471.2l0,-7.5M136.8,471.2l0,-7.5M192.3,471.2l0,-7.5M247.9,471.2l0,-7.5M303.4,471.2l0,-7.5M358.9,471.2l0,-7.5M414.4,471.2l0,-7.5M469.9,471.2l0,-7.5"/>
+</g>
+<g fill="none" stroke-width="1">
+<text x="76.9" y="476.5" font-size="14pt" fill="#000000">1</text>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="1">
+<path d="M76.9,478.5l11,0"/>
+</g>
+<g fill="none" stroke-width="1">
+<text x="119.3" y="476.5" font-size="14pt" fill="#000000">1.25</text>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="1">
+<path d="M119.3,478.5l39,0"/>
+</g>
+<g fill="none" stroke-width="1">
+<text x="179.2" y="476.5" font-size="14pt" fill="#000000">1.5</text>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="1">
+<path d="M179.2,478.5l28,0"/>
+</g>
+<g fill="none" stroke-width="1">
+<text x="230.3" y="476.5" font-size="14pt" fill="#000000">1.75</text>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="1">
+<path d="M230.3,478.5l39,0"/>
+</g>
+<g fill="none" stroke-width="1">
+<text x="299" y="476.5" font-size="14pt" fill="#000000">2</text>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="1">
+<path d="M299,478.5l11,0"/>
+</g>
+<g fill="none" stroke-width="1">
+<text x="341.4" y="476.5" font-size="14pt" fill="#000000">2.25</text>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="1">
+<path d="M341.4,478.5l39,0"/>
+</g>
+<g fill="none" stroke-width="1">
+<text x="401.3" y="476.5" font-size="14pt" fill="#000000">2.5</text>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="1">
+<path d="M401.3,478.5l28,0"/>
+</g>
+<g fill="none" stroke-width="1">
+<text x="452.4" y="476.5" font-size="14pt" fill="#000000">2.75</text>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="1">
+<path d="M452.4,478.5l39,0"/>
+</g>
+<g fill="none" stroke-linecap="butt" stroke-width="0.6">
+<path d="M524.4,471.2l0,-464.1"/>
+<path d="M524.4,461.2l-3.7,0M524.4,450.1l-3.7,0M524.4,439l-3.7,0M524.4,427.9l-3.7,0M524.4,416.8l-3.7,0M524.4,405.7l-3.7,0M524.4,394.6l-3.7,0M524.4,383.5l-3.7,0M524.4,372.4l-3.7,0M524.4,361.3l-3.7,0M524.4,350.2l-3.7,0M524.4,339.1l-3.7,0M524.4,328l-3.7,0M524.4,316.9l-3.7,0M524.4,305.8l-3.7,0M524.4,294.6l-3.7,0M524.4,283.5l-3.7,0M524.4,272.4l-3.7,0M524.4,261.3l-3.7,0M524.4,250.2l-3.7,0M524.4,239.1l-3.7,0M524.4,228l-3.7,0M524.4,216.9l-3.7,0M524.4,205.8l-3.7,0M524.4,194.7l-3.7,0M524.4,183.6l-3.7,0M524.4,172.5l-3.7,0M524.4,161.4l-3.7,0M524.4,150.3l-3.7,0M524.4,139.2l-3.7,0M524.4,128.1l-3.7,0M524.4,117l-3.7,0M524.4,105.9l-3.7,0M524.4,94.8l-3.7,0M524.4,83.7l-3.7,0M524.4,72.6l-3.7,0M524.4,61.4l-3.7,0M524.4,50.3l-3.7,0M524.4,39.2l-3.7,0M524.4,28.1l-3.7,0M524.4,17l-3.7,0"/>
+<path d="M524.4,450.1l-7.5,0M524.4,394.6l-7.5,0M524.4,339.1l-7.5,0M524.4,283.5l-7.5,0M524.4,228l-7.5,0M524.4,172.5l-7.5,0M524.4,117l-7.5,0M524.4,61.4l-7.5,0"/>
+<path d="M60.2,7l464.1,0"/>
+<path d="M70.2,7l0,3.7M81.3,7l0,3.7M92.4,7l0,3.7M103.5,7l0,3.7M114.6,7l0,3.7M125.7,7l0,3.7M136.8,7l0,3.7M147.9,7l0,3.7M159,7l0,3.7M170.1,7l0,3.7M181.2,7l0,3.7M192.3,7l0,3.7M203.4,7l0,3.7M214.5,7l0,3.7M225.6,7l0,3.7M236.8,7l0,3.7M247.9,7l0,3.7M259,7l0,3.7M270.1,7l0,3.7M281.2,7l0,3.7M292.3,7l0,3.7M303.4,7l0,3.7M314.5,7l0,3.7M325.6,7l0,3.7M336.7,7l0,3.7M347.8,7l0,3.7M358.9,7l0,3.7M370,7l0,3.7M381.1,7l0,3.7M392.2,7l0,3.7M403.3,7l0,3.7M414.4,7l0,3.7M425.5,7l0,3.7M436.6,7l0,3.7M447.7,7l0,3.7M458.8,7l0,3.7M469.9,7l0,3.7M481.1,7l0,3.7M492.2,7l0,3.7M503.3,7l0,3.7M514.4,7l0,3.7"/>
+<path d="M81.3,7l0,7.5M136.8,7l0,7.5M192.3,7l0,7.5M247.9,7l0,7.5M303.4,7l0,7.5M358.9,7l0,7.5M414.4,7l0,7.5M469.9,7l0,7.5"/>
+</g>
+<g fill="#ffffff" stroke-width="0.6">
+<path d="m367.7,336.1l107,0l0,103.2l-107,0l0,-103.2"/>
+</g>
+</g>
+<g clip-path="url(#c2)">
+<g fill="none" stroke-width="1">
+<image x="367.7" y="336.1" width="107" height="103.2" xlink:href="data:image/ppm;base64,UDYKNCAzCjI1NQpmJwAAZmbY//+W//+W//+8TQDC////ehQAvLzu9exq//+8TQA=" preserveAspectRatio="none"/>
+</g>
+</g>
+<g clip-path="url(#c0)">
+<g fill="none" stroke-linecap="butt" stroke-width="0.6">
+<path d="M367.7,439.3l0,-103.2"/>
+<path d="M367.7,439.3l3.7,0M367.7,430.7l3.7,0M367.7,422.1l3.7,0M367.7,413.5l3.7,0M367.7,404.9l3.7,0M367.7,396.3l3.7,0M367.7,387.7l3.7,0M367.7,379.1l3.7,0M367.7,370.5l3.7,0M367.7,361.9l3.7,0M367.7,353.3l3.7,0M367.7,344.7l3.7,0M367.7,336.1l3.7,0"/>
+<path d="M367.7,439.3l7.5,0M367.7,422.1l7.5,0M367.7,404.9l7.5,0M367.7,387.7l7.5,0M367.7,370.5l7.5,0M367.7,353.3l7.5,0M367.7,336.1l7.5,0"/>
+<path d="M367.7,439.3l107,0"/>
+<path d="M367.7,439.3l0,-3.7M373.1,439.3l0,-3.7M378.4,439.3l0,-3.7M383.8,439.3l0,-3.7M389.1,439.3l0,-3.7M394.5,439.3l0,-3.7M399.8,439.3l0,-3.7M405.2,439.3l0,-3.7M410.5,439.3l0,-3.7M415.9,439.3l0,-3.7M421.2,439.3l0,-3.7M426.6,439.3l0,-3.7M431.9,439.3l0,-3.7M437.3,439.3l0,-3.7M442.6,439.3l0,-3.7M448,439.3l0,-3.7M453.3,439.3l0,-3.7M458.7,439.3l0,-3.7M464,439.3l0,-3.7M469.4,439.3l0,-3.7M474.7,439.3l0,-3.7"/>
+<path d="M367.7,439.3l0,-7.5M394.5,439.3l0,-7.5M421.2,439.3l0,-7.5M448,439.3l0,-7.5M474.7,439.3l0,-7.5"/>
+<path d="M474.7,439.3l0,-103.2"/>
+<path d="M474.7,439.3l-3.7,0M474.7,430.7l-3.7,0M474.7,422.1l-3.7,0M474.7,413.5l-3.7,0M474.7,404.9l-3.7,0M474.7,396.3l-3.7,0M474.7,387.7l-3.7,0M474.7,379.1l-3.7,0M474.7,370.5l-3.7,0M474.7,361.9l-3.7,0M474.7,353.3l-3.7,0M474.7,344.7l-3.7,0M474.7,336.1l-3.7,0"/>
+<path d="M474.7,439.3l-7.5,0M474.7,422.1l-7.5,0M474.7,404.9l-7.5,0M474.7,387.7l-7.5,0M474.7,370.5l-7.5,0M474.7,353.3l-7.5,0M474.7,336.1l-7.5,0"/>
+<path d="M367.7,336.1l107,0"/>
+<path d="M367.7,336.1l0,3.7M373.1,336.1l0,3.7M378.4,336.1l0,3.7M383.8,336.1l0,3.7M389.1,336.1l0,3.7M394.5,336.1l0,3.7M399.8,336.1l0,3.7M405.2,336.1l0,3.7M410.5,336.1l0,3.7M415.9,336.1l0,3.7M421.2,336.1l0,3.7M426.6,336.1l0,3.7M431.9,336.1l0,3.7M437.3,336.1l0,3.7M442.6,336.1l0,3.7M448,336.1l0,3.7M453.3,336.1l0,3.7M458.7,336.1l0,3.7M464,336.1l0,3.7M469.4,336.1l0,3.7M474.7,336.1l0,3.7"/>
+<path d="M367.7,336.1l0,7.5M394.5,336.1l0,7.5M421.2,336.1l0,7.5M448,336.1l0,7.5M474.7,336.1l0,7.5"/>
+</g>
+<g fill="#ffffff" stroke-width="0.6">
+<path d="m114.6,336.1l107,0l0,103.2l-107,0l0,-103.2"/>
+</g>
+</g>
+<g clip-path="url(#c3)">
+<g fill="none" stroke-width="1">
+<image x="114.6" y="336.1" width="107" height="103.2" xlink:href="data:image/ppm;base64,UDYKMyAzCjI1NQrFk3GP9v8ApskAepl8RBfVq5EzGQDo49p8RBc=" preserveAspectRatio="none"/>
+</g>
+</g>
+<g clip-path="url(#c0)">
+<g fill="none" stroke-linecap="butt" stroke-width="0.6">
+<path d="M114.6,439.3l0,-103.2"/>
+<path d="M114.6,439.3l3.7,0M114.6,430.7l3.7,0M114.6,422.1l3.7,0M114.6,413.5l3.7,0M114.6,404.9l3.7,0M114.6,396.3l3.7,0M114.6,387.7l3.7,0M114.6,379.1l3.7,0M114.6,370.5l3.7,0M114.6,361.9l3.7,0M114.6,353.3l3.7,0M114.6,344.7l3.7,0M114.6,336.1l3.7,0"/>
+<path d="M114.6,439.3l7.5,0M114.6,422.1l7.5,0M114.6,404.9l7.5,0M114.6,387.7l7.5,0M114.6,370.5l7.5,0M114.6,353.3l7.5,0M114.6,336.1l7.5,0"/>
+<path d="M114.6,439.3l107,0"/>
+<path d="M114.6,439.3l0,-3.7M123.5,439.3l0,-3.7M132.4,439.3l0,-3.7M141.3,439.3l0,-3.7M150.2,439.3l0,-3.7M159.2,439.3l0,-3.7M168.1,439.3l0,-3.7M177,439.3l0,-3.7M185.9,439.3l0,-3.7M194.8,439.3l0,-3.7M203.7,439.3l0,-3.7M212.7,439.3l0,-3.7M221.6,439.3l0,-3.7"/>
+<path d="M114.6,439.3l0,-7.5M132.4,439.3l0,-7.5M150.2,439.3l0,-7.5M168.1,439.3l0,-7.5M185.9,439.3l0,-7.5M203.7,439.3l0,-7.5M221.6,439.3l0,-7.5"/>
+<path d="M221.6,439.3l0,-103.2"/>
+<path d="M221.6,439.3l-3.7,0M221.6,430.7l-3.7,0M221.6,422.1l-3.7,0M221.6,413.5l-3.7,0M221.6,404.9l-3.7,0M221.6,396.3l-3.7,0M221.6,387.7l-3.7,0M221.6,379.1l-3.7,0M221.6,370.5l-3.7,0M221.6,361.9l-3.7,0M221.6,353.3l-3.7,0M221.6,344.7l-3.7,0M221.6,336.1l-3.7,0"/>
+<path d="M221.6,439.3l-7.5,0M221.6,422.1l-7.5,0M221.6,404.9l-7.5,0M221.6,387.7l-7.5,0M221.6,370.5l-7.5,0M221.6,353.3l-7.5,0M221.6,336.1l-7.5,0"/>
+<path d="M114.6,336.1l107,0"/>
+<path d="M114.6,336.1l0,3.7M123.5,336.1l0,3.7M132.4,336.1l0,3.7M141.3,336.1l0,3.7M150.2,336.1l0,3.7M159.2,336.1l0,3.7M168.1,336.1l0,3.7M177,336.1l0,3.7M185.9,336.1l0,3.7M194.8,336.1l0,3.7M203.7,336.1l0,3.7M212.7,336.1l0,3.7M221.6,336.1l0,3.7"/>
+<path d="M114.6,336.1l0,7.5M132.4,336.1l0,7.5M150.2,336.1l0,7.5M168.1,336.1l0,7.5M185.9,336.1l0,7.5M203.7,336.1l0,7.5M221.6,336.1l0,7.5"/>
+</g>
+</g>
+</g>
+</svg>
